[package]
name = "web_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
tokio = { version = "1.36.0", features = ["full"] }
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3.18"
axum = "0.7.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115", features = ["default"] }
